Renaming to PriorityListSolver

--- a/PriorityListSolver/PriorityListSolver.vcxproj.filters
+++ b/PriorityListSolver/PriorityListSolver.vcxproj.filters
@@ -33,7 +33,7 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Course_Scheduler.cpp">
+    <ClCompile Include="PriorityListSolver.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
