--- a/PriorityListSolver/PriorityListSolver.vcxproj
+++ b/PriorityListSolver/PriorityListSolver.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{76FFE965-61C4-4E7B-9B33-86C32BFBC5AE}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>Course_Scheduler</RootNamespace>
+    <ProjectName>PriorityListSolver</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -85,7 +86,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Course_Scheduler.cpp" />
+    <ClCompile Include="PriorityListSolver.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
